--- a/static/src/stylesheets/module/commercial/_advert.scss
+++ b/static/src/stylesheets/module/commercial/_advert.scss
@@ -115,6 +115,19 @@
     }
 }
 
+.advert--branded {
+    padding-bottom: $gs-row-height + $gs-baseline * 5; //96px = $gs-row-height + height of the logo
+}
+
+.advert-container {
+    display: flex;
+    align-items: stretch;
+
+    > * {
+        width: 100%;
+    }
+}
+
 /* [1] Prevents IE11 bug where the image container's height would go ballooney */
 .advert__image-container {
     order: -1;
