Adds in a column should stack in a column ...

--- a/static/src/stylesheets/module/commercial/_adverts.scss
+++ b/static/src/stylesheets/module/commercial/_adverts.scss
@@ -563,7 +563,7 @@
 
 .adverts__column {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
 
     &:not(.adverts__2cols) {
         > * + * {
