hosted native cards - make sure the styles are correct in immersive articles

--- a/static/src/stylesheets/module/commercial/gustyle/_gu-comcontent.scss
+++ b/static/src/stylesheets/module/commercial/gustyle/_gu-comcontent.scss
@@ -235,7 +235,7 @@ $mobile-max-container-width: gs-span(8);
         }
     }
 
-    .gu-display__content-title--hosted {
+    .gu-display__content-title.gu-display__content-title--hosted {
         @include f-headlineSans;
         @include font-size(22, 24);
 
