Revert "Merge pull request #14676 from guardian/nb-add-variant-new-header"
This reverts commit 6f58157d6b6b7e5f953f9fbded0576657cc795c4, reversing
changes made to 2d95ee48b30e51fbb798a3bc1754df28f1127032.

--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -717,6 +717,7 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     flex-direction: row;
     flex-flow: row wrap;
     justify-content: space-between;
+    margin-top: -$gs-baseline;
     margin-bottom: -$gs-baseline/2;
     margin-left: $gs-gutter / 2;
     margin-right: $gs-gutter / 2;
