--- a/common/app/views/fragments/containers/facia_cards/container.scala.html
+++ b/common/app/views/fragments/containers/facia_cards/container.scala.html
@@ -1,5 +1,5 @@
 @import common.commercial.ContainerModel
-@import common.{NewNavigation, LinkTo, Edition, NavLink}
+@import common.{NewNavigation, LinkTo}
 @import layout.MetaDataHeader
 @import slices.{Dynamic, Fixed, MostPopular, NavList, NavMediaList, Video}
 @import views.html.commercial.containers.paidContainer
@@ -87,42 +87,18 @@
                     frontId.getOrElse(pageId)
                     )) { case (isFirstContainer, id) =>
 
-                    @if((mvt.ABNewHeaderVariant.isParticipating || mvt.ABNewHeaderVariantTwo.isParticipating) && isFirstContainer) {
+                    @if(mvt.ABNewHeaderVariant.isParticipating && isFirstContainer) {
 
                         <ul class="tertiary-navigation mobile-only">
 
-                            @* TODO: we should make sure that sport, culture, and life have tertiary links *@
-                            @* TODO: should this only happen on the second variant?*@
-                            @defining(Edition(request)) { edition: Edition =>
+                            @NewNavigation.TertiaryNav.getTertiaryNavLinks(id).map { tertiaryLink =>
 
-                                @id match {
-                                    case news if id == edition.networkFrontId => {
-                                        @NewNavigation.News.getEditionalisedNavLinks(edition).drop(1).map(link => tertiaryLink(link))
-                                    }
-                                    case opinion if id.contains("commentisfree") => {
-                                        @NewNavigation.Opinion.getEditionalisedNavLinks(edition).drop(1).map(link => tertiaryLink(link))
-                                    }
-                                    case sport if id.contains("sport") => {
-                                        @NewNavigation.Sport.getEditionalisedNavLinks(edition).drop(1).map(link => tertiaryLink(link))
-                                    }
-                                    case arts if id.contains("culture") => {
-                                        @NewNavigation.Arts.getEditionalisedNavLinks(edition).drop(1).map(link => tertiaryLink(link))
-                                    }
-                                    case life if id.contains("lifestyle") => {
-                                        @NewNavigation.Life.getEditionalisedNavLinks(edition).drop(1).map(link => tertiaryLink(link))
-                                    }
-                                    case _ => {
-                                        @NewNavigation.TertiaryNav.getTertiaryNavLinks(id).map { tertiaryLink =>
-
-                                            <li class="tertiary-navigation__item">
-                                                <a class="tertiary-navigation__link" href="@LinkTo(tertiaryLink.url)" data-link-name="nav2 : tertiary : @tertiaryLink.name">
-                                                    <span class="tertiary-navigation__text">@Html(tertiaryLink.name)</span>
-                                                    <i class="tertiary-navigation__icon rounded-icon"></i>
-                                                </a>
-                                            </li>
-                                        }
-                                    }
-                                }
+                                <li class="tertiary-navigation__item">
+                                    <a class="tertiary-navigation__link" href="@LinkTo(tertiaryLink.url)" data-link-name="nav2 : tertiary : @tertiaryLink.name">
+                                        <span class="tertiary-navigation__text">@Html(tertiaryLink.name)</span>
+                                        <i class="tertiary-navigation__icon rounded-icon"></i>
+                                    </a>
+                                </li>
                             }
                         </ul>
 
@@ -131,13 +107,4 @@
             </section>
         }
     }
-}
-
-@tertiaryLink(link: NavLink) = {
-    <li class="tertiary-navigation__item">
-        <a class="tertiary-navigation__link" href="@LinkTo(link.url)" data-link-name="nav2 : tertiary : @link.name">
-            <span class="tertiary-navigation__text">@Html(link.name)</span>
-            <i class="tertiary-navigation__icon rounded-icon"></i>
-        </a>
-    </li>
 }
