hosted onward journey - empty popup with close button

--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -745,6 +745,10 @@ $hosted-video-height: 540px;
     &:visited {
         text-decoration: none;
     }
+
+    .hostedbadge {
+        z-index: $zindex-ads;
+    }
 }
 
 .hosted__cta-link,
