--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -515,6 +515,61 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
     }
 }
 
+.ab-test-variant2 {
+    .hosted__see-all-onward {
+        cursor: pointer;
+        display: inline-block;
+        border-radius: 100px;
+        padding: 0 $gs-gutter;
+    }
+}
+
+.hosted__more-from-overlay.survey-overlay-simple {
+    z-index: $zindex-ads;
+    position: absolute;
+    height: auto;
+    bottom: 0;
+    svg {
+        fill: #ffffff;
+    }
+}
+
+.hosted__more-from-title {
+    @include f-headlineSans;
+    margin: 40px 100px 0 180px;
+
+    .hosted__text {
+        color: #ffffff;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+}
+
+.hosted__more-from-overlay button.hosted__more-from-overlay-close {
+    padding-top: 3px;
+    outline: none;
+    border-radius: 100px;
+    border: 1px solid #ffffff;
+    position: absolute;
+    top: $gs-baseline;
+    right: $gs-gutter;
+
+    .button-text {
+        color: #ffffff;
+        position: absolute;
+        right: 50px;
+        opacity: .5;
+        font-size: 16px;
+    }
+}
+
+.hosted__more-from-popup {
+    position: fixed;
+    width: 100%;
+}
+
 .hosted__carousel-marker {
     text-align: center;
 }
