--- a/static/src/stylesheets/module/email/_iframe.scss
+++ b/static/src/stylesheets/module/email/_iframe.scss
@@ -147,8 +147,7 @@ body {
 */
 .email-sub--plain,
 .email-sub--plaindark,
-.email-sub--plaintone,
-{
+.email-sub--plaintone {
     .email-sub__header,
     .email-sub__label,
     .email-sub__small {
