--- a/commercial/app/views/paidContent/card.scala.html
+++ b/commercial/app/views/paidContent/card.scala.html
@@ -31,16 +31,18 @@
 
     </div>
     @fragments.commercial.paidForMeta()
-    <a href="@optClickMacro@articleUrl" class="paidfor-box paidfor-box--header" data-link-name="@linkTracking | article title">
-        <h2 class="gu-title">@articleTitle</h2>
-    </a>
-    <a href="@optClickMacro@articleUrl" class="paidfor-box paidfor-box--text" data-link-name="@linkTracking | article text">
-        @for(text <- articleText){ <div class="gu-text">@Html(text)</div> }
-    </a>
-    <a href="@optClickMacro@articleUrl" class="paidfor-box paidfor-box--logo" data-link-name="@linkTracking | advertiser logo">
-        <div class="paidfor-brand">
-            <span class="paidfor-note">Paid for by:</span>
-            @for(logoUrl <- brandLogo) {<img src="@logoUrl" alt="@brand" class="paidfor-logo"/>}
-        </div>
-    </a>
+    <div class="paidfor-box-wrapper">
+        <a href="@optClickMacro@articleUrl" class="paidfor-box paidfor-box--header" data-link-name="@linkTracking | article title">
+            <h2 class="gu-title">@articleTitle</h2>
+        </a>
+        <a href="@optClickMacro@articleUrl" class="paidfor-box paidfor-box--text" data-link-name="@linkTracking | article text">
+            @for(text <- articleText){ <div class="gu-text">@Html(text)</div> }
+        </a>
+        <a href="@optClickMacro@articleUrl" class="paidfor-box paidfor-box--logo" data-link-name="@linkTracking | advertiser logo">
+            <div class="paidfor-brand">
+                <span class="paidfor-note">Paid for by:</span>
+                @for(logoUrl <- brandLogo) {<img src="@logoUrl" alt="@brand" class="paidfor-logo"/>}
+            </div>
+        </a>
+    </div>
 </div>
