--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -102,6 +102,15 @@ $hosted-video-height: 540px;
     }
 }
 
+.hosted__cta-fine-print {
+    @include f-headlineSans;
+    color: #ffffff;
+    display: block;
+    font-size: 12px;
+    margin: 8px 0;
+    line-height: 14px;
+}
+
 .host__header {
     display: flex;
     flex-direction: column;
@@ -605,7 +614,7 @@ $hosted-video-height: 540px;
     }
 
     @include mq(mobile) {
-        height: 200px;
+        min-height: 200px;
         background-position: left;
     }
 
