--- a/static/src/stylesheets/module/commercial/_creatives.scss
+++ b/static/src/stylesheets/module/commercial/_creatives.scss
@@ -913,3 +913,43 @@
         transform: (translateY(5px));
     }
 }
+
+.creative__background-parent {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+
+    /* This will clip the fixed-positioned child to the boundaries of its parent */
+    clip: rect(0, auto, auto, 0);
+
+    .creative__background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        @include mq(tablet) {
+            left: calc(50% - #{(gs-span(9) + $gs-gutter * 2) / 2});
+            right: calc(50% - #{(gs-span(9) + $gs-gutter * 2) / 2});
+        }
+
+        @include mq(desktop) {
+            left: calc(50% - #{(gs-span(12) + $gs-gutter * 2) / 2});
+            right: calc(50% - #{(gs-span(12) + $gs-gutter * 2) / 2});
+        }
+
+        @include mq(leftCol) {
+            left: calc(50% - #{(gs-span(14) + $gs-gutter * 2) / 2});
+            right: calc(50% - #{(gs-span(14) + $gs-gutter * 2) / 2});
+        }
+
+        @include mq(wide) {
+            left: calc(50% - #{(gs-span($gs-max-columns) + $gs-gutter * 2) / 2});
+            right: calc(50% - #{(gs-span($gs-max-columns) + $gs-gutter * 2) / 2});
+        }
+    }
+}
