Remove top-level commercial folder in common views.

--- a/commercial/app/views/masterclasses/masterclasses.scala.html
+++ b/commercial/app/views/masterclasses/masterclasses.scala.html
@@ -3,7 +3,7 @@
   clickMacro: Option[String])(implicit request: RequestHeader)
 
 @import conf.Configuration
-@import views.html.commercial.containerWrapper
+@import views.html.fragments.commercial.containerWrapper
 @import views.html.masterclasses.masterclassCard
 
 @containerWrapper(Seq("legacy", "masterclasses", "tone-masterclasses"),
