--- a/commercial/app/views/books/booksStandard.scala.html
+++ b/commercial/app/views/books/booksStandard.scala.html
@@ -5,7 +5,7 @@
 
 @import conf.Configuration
 @import views.html.books.{bookCard, searchForm}
-@import views.html.commercial.containerWrapper
+@import views.html.fragments.commercial.containerWrapper
 
 @containerWrapper(Seq("legacy", "books", "tone-books"),
                   dataLinkName = omnitureId.map(id => s"merchandising | books standard | ${id}"),
