--- a/commercial/app/views/jobs/jobs.scala.html
+++ b/commercial/app/views/jobs/jobs.scala.html
@@ -4,7 +4,7 @@
   omnitureId: Option[String],
   clickMacro: Option[String])(implicit request: RequestHeader)
 
-@import views.html.commercial.containerWrapper
+@import views.html.fragments.commercial.containerWrapper
 @import views.html.jobs.jobCard
 
 @containerWrapper(Seq("legacy", "jobs", "tone-jobs"),
