Put attributions back onto the audio main image

--- a/applications/app/views/fragments/mediaBody.scala.html
+++ b/applications/app/views/fragments/mediaBody.scala.html
@@ -35,8 +35,7 @@
 
                                         @audio.elements.images.map { img =>
                                             @fragments.imageFigure(
-                                                img.images,
-                                                doCaption=false
+                                                img.images
                                             )
                                         }
 
