Remove an unnnecessary root and broad package selector.

--- a/common/app/views/fragments/atoms/interactive.scala.html
+++ b/common/app/views/fragments/atoms/interactive.scala.html
@@ -1,5 +1,5 @@
 @import common.InlineJs
-@import _root_.model.content.InteractiveAtom
+@import model.content.InteractiveAtom
 @import templates.inlineJS.nonBlocking.js.{interactiveFonts, interactiveResize}
 
 @(interactive: InteractiveAtom, shouldFence: Boolean)
