--- a/common/app/views/fragments/immersiveMainMedia.scala.html
+++ b/common/app/views/fragments/immersiveMainMedia.scala.html
@@ -1,5 +1,5 @@
 @import common.{LinkTo, Localisation}
-@import conf.switches.Switches._
+@import conf.switches.Switches.ArticleBadgesSwitch
 @import layout.ContentWidths.MainMedia
 @import model.Badges.badgeFor
 @import model.ContentPage
