--- a/common/app/views/fragments/atoms/atom.scala.html
+++ b/common/app/views/fragments/atoms/atom.scala.html
@@ -1,11 +1,11 @@
-@(model: _root_.model.content.Atom, shouldFence: Boolean)(implicit request: RequestHeader)
+@(model: _root_.model.content.Atom, amp: Boolean, shouldFence: Boolean)(implicit request: RequestHeader)
 @import _root_.model.content.Quiz
 @import _root_.model.content.MediaAtom
 @import _root_.model.content.InteractiveAtom
 
 @{
     model match {
-        case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, showResults = false, Nil)
+        case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, showResults = false, Nil, amp)
         case media: MediaAtom => media match {
             case youtube if media.assets.head.platform == "Youtube" => views.html.fragments.atoms.youtube(media)
             case _ => views.html.fragments.atoms.media(media)
