Fix logo positioning in paidfor MPU

--- a/static/src/stylesheets/module/commercial/paidfor/_paidfor-content.scss
+++ b/static/src/stylesheets/module/commercial/paidfor/_paidfor-content.scss
@@ -67,6 +67,7 @@
 
 .paidfor-box-wrapper {
     min-height: 140px;
+    position: relative;
 }
 
 .paidfor-box {
@@ -93,6 +94,9 @@
 
 .paidfor-box--logo {
     padding-bottom: $gs-gutter / 4;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
 
 .content--immersive {
