Move jobs models from model.commercial.jobs to commercial.model.merchandise.jobs.

--- a/commercial/app/views/jobs/jobs.scala.html
+++ b/commercial/app/views/jobs/jobs.scala.html
@@ -1,4 +1,4 @@
-@import model.commercial.jobs.JobSector
+@import commercial.model.merchandise.jobs.JobSector
 @(jobs: Seq[model.commercial.Job],
   jobSectors: Seq[JobSector],
   omnitureId: Option[String],
