Just cleaning up prior to push.

--- a/static/src/stylesheets/module/_release-message.scss
+++ b/static/src/stylesheets/module/_release-message.scss
@@ -598,7 +598,7 @@ $btn-height: gs-height(1) - $gs-baseline/2; //30px
         background-color: #b50fb5;
     }
     .message-button-rounded__cta.bright-blue {
-        background-color: #0000FF;
+        background-color: #0000ff;
     }
     .message-button-rounded__cta.dark-blue {
         background-color: #2499c3;
