removing unnused class in the new header variant two

--- a/common/app/views/fragments/newHeader.scala.html
+++ b/common/app/views/fragments/newHeader.scala.html
@@ -13,7 +13,7 @@
 }
 
 @primaryLinksv2(link: NavLink) = {
-    <a class="new-header__nav__link js-open-section-in-menu"
+    <a class="new-header__nav__link"
         href="@LinkTo(link.url)"
         data-link-name="nav2 : primary : @link.name">
             @link.name
