--- a/common/app/views/fragments/atoms/atom.scala.html
+++ b/common/app/views/fragments/atoms/atom.scala.html
@@ -1,11 +1,10 @@
 @(model: _root_.model.content.Atom, shouldFence: Boolean, amp: Boolean)(implicit request: RequestHeader)
-@import _root_.model.content.Quiz
-@import _root_.model.content.MediaAtom
-@import _root_.model.content.InteractiveAtom
+@import _root_.model.ShareLinkMeta
+@import _root_.model.content.{InteractiveAtom, MediaAtom, Quiz}
 
 @{
     model match {
-        case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, showResults = false, Nil)
+        case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, showResults = false, ShareLinkMeta(Nil, None))
         case media: MediaAtom => views.html.fragments.atoms.media(media, amp)
         case interactive: InteractiveAtom => views.html.fragments.atoms.interactive(interactive, shouldFence)
         case _ =>
